--- a/ethnode/webui/src/scss/main.scss
+++ b/ethnode/webui/src/scss/main.scss
@@ -61,6 +61,7 @@
 @import 'elements/maps'; //   	   	         maps
 @import 'elements/authentication'; //        authentication
 @import 'elements/icons'; //                 icons
+@import 'elements/user-card'; //                 icons
 
 /*---------------------------------
 -------------- apps ---------------
