--- a/ethnode/webui/styles/main.css
+++ b/ethnode/webui/styles/main.css
@@ -432,9 +432,9 @@ section.documentation .container .profile-information-container .profile-informa
 section.documentation .container .profile-information-container .profile-information.up .profile-upper .languages p {
     line-height: 24px;
     border-radius: 4px;
-    border: solid 1px #e1e8ee;
+    border: solid 1px #52afff; /*#e1e8ee*/
     padding: 0px 10px;
-    color: #86939e;
+    color: #52afff; /*#86939e*/
     margin-right: 5px;
     display: inline-block;
 }
@@ -445,9 +445,12 @@ section.documentation .container .profile-information-container .profile-informa
 section.documentation .container .profile-information-container .profile-information.up .profile-upper .languages p:hover,
 section.documentation .container .profile-information-container .profile-information.up .profile-upper .languages p:focus,
 section.documentation .container .profile-information-container .profile-information.up .profile-upper .languages p:active {
-    background-color: #e1e8ee;
+    /* background-color: #e1e8ee;
     cursor: pointer;
-    color: #99a9b6;
+    color: #99a9b6; */
+    background-color: #52afff;
+    cursor: pointer;
+    color: #ffffff;
 }
 
 section.documentation .container .profile-information-container .profile-information.up .profile-upper .skills p span.experience,
@@ -1930,7 +1933,7 @@ span.gig-title {
 */
 
 .modal-box-content .inner-modal {
-    background: white !important;
+    background: #f5f6fa !important;
 }
 
 .modal-box-content .inner-modal .content {
@@ -2051,9 +2054,9 @@ span.gig-title {
 }
 
 .modal-box-content .inner-modal .content .modal-body .modal-inputs form>div.whole-line {
-    display: -webkit-flex;
+    /* display: -webkit-flex;
     display: -ms-flexbox;
-    display: flex;
+    display: flex; */
     clear: both;
     width: 100%;
 }
@@ -2079,6 +2082,7 @@ span.gig-title {
     padding-right: 15px;
     margin: 0 auto;
     max-width: 440px;
+    margin-top: 20px;
 }
 
 .modal-box-content .inner-modal .content .modal-body .form-group [type=file] {
@@ -2088,7 +2092,7 @@ span.gig-title {
 }
 
 .modal-box-content .inner-modal .content .modal-body .form-group [type=file]+label {
-    border: 1px solid #CCC;
+    border: 4px dashed #CCC;
     border-radius: 3px;
     text-align: left;
     padding: 155px 0 0 0;
@@ -2099,7 +2103,6 @@ span.gig-title {
     text-align: center;
     background: #f5f6fa;
     color: #91969c;
-    border: none;
     cursor: pointer;
 }
 
@@ -2171,10 +2174,9 @@ span.gig-title {
     width: 100%;
     height: 100%;
     position: fixed;
-    top: 0;
+    top: -60px;
     left: 0;
     bottom: 0;
-    top: 0;
 }
 
 .flex.floating .modal-box-content .inner-modal {
@@ -2185,14 +2187,17 @@ span.gig-title {
 }
 
 .flex.floating .modal-box-content .inner-modal .content {
+    background-color: #fff;
     opacity: 0;
     height: 100%;
     width: 100%;
     max-width: 870px;
     margin: 0 auto;
-    margin-top: 115px;
+    /* margin-top: 115px; */
     transition: opacity .4s ease;
     -webkit-backface-visibility: hidden;
+    border: 1px solid;
+    border-color: #e6ecf5;
     backface-visibility: hidden;
     color: #fefefe;
     text-align: center;
@@ -3586,3 +3591,32 @@ div.new-modal-footer-buttons {
 
 
 /* end new modal styles */
+
+.gig-title-label {
+    text-align: left;
+    display: block;
+    color: rgba(0,0,0,.26);
+}
+
+.close-btn  {
+    border: 1px solid;
+}
+
+.lh-normal {
+    line-height: 1.42857143;
+}
+
+.page-card-name {
+    font-size: 26px;
+    color: #011627;
+    padding-top: 50px;
+    text-align: center;
+    font-weight: 700;
+    font-family: 'Roboto', sans-serif;
+    text-transform: uppercase;
+    padding-top: 100px;
+}
+
+.add-photo-label {
+    padding-top: 10px;
+}
