--- a/ethnode/uilite/index.css
+++ b/ethnode/uilite/index.css
@@ -135,7 +135,6 @@ background: red;
 }
 
 div.outer-content {
- background: green;
 
     width: 100%;
     text-align: center;
@@ -162,8 +161,9 @@ div.inner-content {
 
     display: table;
     /*width: 79%;*/
-    max-width: 1000px;
-    min-width: 300px;
+    /*max-width: 1000px;
+    min-width: 300px;*/
+    width: 100%;
 
     background-color: gray;
 
@@ -182,10 +182,19 @@ div.inner-content {
     /*max-width: 1024px; */
 }
 
+div#main-content {
+background: pink;
+width: 100%;
+float: left;
+margin-left: 10px;
+margin-right: 10px;
+}
+
 a.color_orange {
 
 background-color: #FFB266;
 }
+
 
 
 
