profile page (new design)

--- a/ethnode/webui/src/scss/common/_helpers.scss
+++ b/ethnode/webui/src/scss/common/_helpers.scss
@@ -3100,3 +3100,58 @@
     border: 1px solid #e6ecf5 !important;
     border-radius: 2px !important;
 }
+
+/* Color */
+
+.color-black {
+    color: #000;
+}
+.color-white {
+    color: #fff;
+}
+
+
+.bg-white {
+    background-color: #fff;
+}
+.bg-black {
+    background-color: #000;
+}
+
+
+.color-blue {
+    background-color:	#92a8d1;
+}
+.color-light-blue {
+    background-color:	#d0e1ff;
+}
+.color-sky-blue {
+    background-color: #e6eeff;
+}
+.color-pink {
+    background-color: #f7cac9;
+}
+.color-light-pink {
+    background-color: #ffecec;
+}
+
+
+.bg-color-blue {
+    background-color:	#92a8d1;
+}
+.bg-color-light-blue {
+    background-color:	#d0e1ff;
+}
+.bg-color-sky-blue {
+    background-color: #e6eeff;
+}
+.bg-color-pink {
+    background-color: #f7cac9;
+}
+.bg-color-light-pink {
+    background-color: #ffecec;
+}
+
+.color-main-grey {
+    color: #4a4a4a;
+}
