--- a/ethnode/webui/src/scss/main.scss
+++ b/ethnode/webui/src/scss/main.scss
@@ -61,7 +61,8 @@
 @import 'elements/maps'; //   	   	         maps
 @import 'elements/authentication'; //        authentication
 @import 'elements/icons'; //                 icons
-@import 'elements/user-card'; //                 icons
+@import 'elements/user-card'; //             user-card
+@import 'elements/profile-page.scss'; //     profile-page.scss
 
 /*---------------------------------
 -------------- apps ---------------
