profile page tab fixes

--- a/ethnode/webui/src/scss/elements/_profile-page.scss
+++ b/ethnode/webui/src/scss/elements/_profile-page.scss
@@ -79,15 +79,18 @@
 
                         a {
                             color: #e6eeff;
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                            height: 40px;
+                            width: 40px;
                             transition: .3s;
-                            padding: 10px;
                             border: 1px solid transparent;
                         }
                         &:hover {
                             a {
                                 color: #ffffff;
                                 border: 1px solid #e6eeff;
-                                padding: 10px;
                                 border-radius: 1px;
                             }
                         }
@@ -102,9 +105,9 @@
     background-color: #f6f7fb;
     .profile-documentation {
         margin-left: 0px;
-        .nav {
-            box-shadow: 10px 10px 25px rgba(0, 0, 0, 0.1), 0 -2px 5px rgba(0, 0, 0, 0.1);
-            border-radius: 15px;
+        box-shadow: 10px 10px 25px rgba(0, 0, 0, 0.1), 0 -2px 5px rgba(0, 0, 0, 0.1);
+        border-radius: 15px;
+        .nav { 
             li {
                 a {
 
@@ -117,7 +120,7 @@
     }
     .tab-pane {
         background-color: #fff;
-        margin-top: 8px;
+        margin-top: 40px;
         box-shadow: 5px 5px 22px rgba(0, 0, 0, 0.21), 0 5px 10px rgba(0, 0, 0, 0);
         border-radius: 15px;
     }
