--- a/ethnode/webui/styles/main.css
+++ b/ethnode/webui/styles/main.css
@@ -656,6 +656,7 @@ section.documentation .container .profile-information-after-fixed .container-flu
 
 .profile-documentation-full .profile-documentation ul.nav {
     background-color: white;
+    box-shadow: 10px 10px 25px rgba(0, 0, 0, 0.1), 0 -2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .profile-documentation-full .profile-documentation ul.nav li:not(.mdl-menu__item):hover,
@@ -3390,6 +3391,14 @@ body header.main-header {
 .tab-content {
     padding-right: 0;
     padding-left: 0;
+    padding-top: 20px;
+    margin-top: 40px;
+    background-color: #fff;
+    
+}
+
+.main-tab-content {
+    box-shadow: 10px 10px 25px rgba(0, 0, 0, 0.1), 0 -2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .tab-content .tab-pane {
