--- a/ethnode/webui/styles/main.css
+++ b/ethnode/webui/styles/main.css
@@ -214,7 +214,7 @@ header .container nav #navigation ul li.logout-mobile {
 }
 
 
-/* 
+/*
 header .container nav #navigation ul ul.dropdown-menu {
     margin-top: -5px;
     border-radius: 0;
@@ -1684,7 +1684,7 @@ section.profiles-page-content .container .jobs .gigs-container:after {
         margin-top: 25px;
         width: 100%;
     }
-    
+
 
 .profile-card :hover,
 .profile-card :focus,
@@ -1750,7 +1750,7 @@ section.profiles-page-content .container .jobs .gigs-container:after {
 }
 
 
-/*  
+/*
 .gig {
     width: 240px;
     height: 290px;
@@ -1936,7 +1936,8 @@ span.gig-title {
 */
 
 .modal-box-content .inner-modal {
-    background: #f5f6fa !important;
+    /* background: #f5f6fa !important; */
+    background-color: #515365 !important;
 }
 
 .modal-box-content .inner-modal .content {
@@ -2177,9 +2178,9 @@ span.gig-title {
     width: 100%;
     height: 100%;
     position: fixed;
-    top: -60px;
     left: 0;
     bottom: 0;
+    padding-bottom: 50px;
 }
 
 .flex.floating .modal-box-content .inner-modal {
@@ -2191,8 +2192,10 @@ span.gig-title {
 
 .flex.floating .modal-box-content .inner-modal .content {
     background-color: #fff;
+    padding-bottom: 50px;
     opacity: 0;
-    height: 100%;
+    min-height: 100%;
+    height: auto;
     width: 100%;
     max-width: 870px;
     margin: 0 auto;
@@ -3602,13 +3605,13 @@ div.new-modal-footer-buttons {
 
 .page-card-name {
     font-size: 26px;
-    color: #011627;
+    color: white;
     padding-top: 50px;
     text-align: center;
     font-weight: 700;
     font-family: 'Roboto', sans-serif;
     text-transform: uppercase;
-    padding-top: 100px;
+    padding-top: 50px;
 }
 
 .add-photo-label {
