header menu hover effect + align items in gig content

--- a/ethnode/webui/src/scss/elements/_profile-page.scss
+++ b/ethnode/webui/src/scss/elements/_profile-page.scss
@@ -124,3 +124,10 @@
         border-radius: 15px;
     }
 }
+
+
+.gigs-container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
