--- a/ethnode/webui/src/scss/elements/_user-card.scss
+++ b/ethnode/webui/src/scss/elements/_user-card.scss
@@ -121,6 +121,10 @@
             }
         }
     }
+    &:hover {
+        transform: scale(1.05);
+        box-shadow: 4px 6px 10px 0 rgba(0, 0, 0, 0.2);
+    }
 }
 
 .fz-15 {
