--- a/ethnode/webui/styles/main.css
+++ b/ethnode/webui/styles/main.css
@@ -1708,6 +1708,8 @@ section.profiles-page-content .container .jobs .gigs-container:after {
     margin-right: 30px;
     margin-bottom: 30px;
     transition: all 0.15s ease-in;
+    display: flex;
+    flex-direction: column;
 }
 
 .profile-card .owner-info {
