--- a/ethnode/webui/src/scss/elements/_user-card.scss
+++ b/ethnode/webui/src/scss/elements/_user-card.scss
@@ -122,8 +122,8 @@
         }
     }
     &:hover {
-        transform: scale(1.05);
-        box-shadow: 4px 6px 10px 0 rgba(0, 0, 0, 0.2);
+        // lags with blue transform: scale(1.02);
+        box-shadow: 3px 5px 9px 0 rgba(0, 0, 0, 0.1);
     }
 }
 
