Add gig modal and crop

--- a/ethnode/webui/src/scss/main.scss
+++ b/ethnode/webui/src/scss/main.scss
@@ -78,3 +78,4 @@
 ---------------------------------*/
 
 @import 'custom-components/redesigned-gig-modal';
+@import 'custom-components/add-gig-redesigned';
