global fixes + disable state in tabs

--- a/ethnode/webui/src/scss/elements/_profile-page.scss
+++ b/ethnode/webui/src/scss/elements/_profile-page.scss
@@ -132,3 +132,13 @@
     flex-wrap: wrap;
     padding-left: 30px;
 }
+
+.disable-state {
+    cursor: not-allowed;
+    a {
+        color: #eee; 
+        user-select: none; 
+        cursor: not-allowed; 
+        pointer-events: none;
+    }
+}
