--- a/ethnode/webui/src/templates/header-global.html
+++ b/ethnode/webui/src/templates/header-global.html
@@ -19,7 +19,7 @@
                     </li>
                     <ul data-labelledby="settings-dropdown" class="dropdown-menu absolute">
                         <li><a href="/ui/profile" class="flex-block flex-center"><i class="ti-user pdd-right-10 font-size-18"></i>My Profile</a></li>
-                        <li><a href="" class="flex-block flex-center"><i class="ti-info pdd-right-10 font-size-18"></i>About Node</a></li>
+                        <!-- <li><a href="" class="flex-block flex-center"><i class="ti-info pdd-right-10 font-size-18"></i>About Node</a></li> -->
                     </ul>
             </div>
         </nav>
