--- a/ethnode/webui/src/scss/elements/_profile-page.scss
+++ b/ethnode/webui/src/scss/elements/_profile-page.scss
@@ -142,3 +142,28 @@
         pointer-events: none;
     }
 }
+
+.modal-btn-order {
+    &:hover {
+        background: #f7cac9;
+        color: #fff;
+        border-color: #ffc0c0;
+    }
+}
+
+.about-head-modal {
+    img {
+        margin-bottom: 0px;
+    }
+    h3 {
+        margin-bottom: 5px;
+        margin-top: 0px;
+    }
+    .btn {
+        background-color: #d0e1ff;
+        border-color: #d0e1ff;
+        span {
+            color: #92a8d1;
+        }
+    }
+}
