--- a/ethnode/webui/src/scss/elements/_tabs.scss
+++ b/ethnode/webui/src/scss/elements/_tabs.scss
@@ -51,7 +51,8 @@
         &:focus,
         &:active {
             border-color: transparent;
-            color: #0f9aee;
+            color: #f7cac9;
+            // color: #0f9aee;
         }
     }
 }
@@ -77,10 +78,10 @@
         >li {
             >a {
                 &.active {
-                    border-bottom: 2px solid $default-info;
+                    border-bottom: 2px solid #92a8d1;
                     &:hover,
                     &:focus {
-                        border-bottom: 2px solid $default-info;
+                        border-bottom: 2px solid #92a8d1;
                     }
                 }
             }
