add color state for button

--- a/ethnode/webui/src/scss/elements/_profile-page.scss
+++ b/ethnode/webui/src/scss/elements/_profile-page.scss
@@ -167,3 +167,13 @@
         }
     }
 }
+
+.btn-pink {
+    background-color: #f7cac9;
+    border-color: #f7cac9;
+    &:hover {
+        background-color: #fddcdb;
+        border-color: #f7cac9;
+        color: #fff;
+    }
+}
