--- a/ethnode/webui/src/scss/elements/_user-card.scss
+++ b/ethnode/webui/src/scss/elements/_user-card.scss
@@ -40,7 +40,7 @@
     }
     .img-card {
         overflow: hidden;
-        height: 142px;
+        height: 130px;
         border-bottom: 1px solid #cecece;
         .btn-info-edit {
             position: absolute;
@@ -107,12 +107,14 @@
         height: 110px;
         margin: 0 auto;
         -webkit-line-clamp: 6;
-        -webkit-box-orient: vertical; 
+        -webkit-box-orient: vertical;
         overflow: hidden;
         text-overflow: ellipsis;
         }
     }
     .user-price {
+        position: absolute;
+        top: calc(100% - 35px);
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -123,6 +125,8 @@
         padding-bottom: 5px;
         border-top: 1px solid #eee;
         background-color: #ffecec;
+        width: 100%;
+        top: calc(100% - 35px);
         // background: rgba(149, 205, 248, 0.12941176470588237);
         span {
             display: flex;
