--- a/ethnode/webui/src/scss/elements/_profile-page.scss
+++ b/ethnode/webui/src/scss/elements/_profile-page.scss
@@ -1,16 +1,29 @@
 .profile-headline {
-        background: linear-gradient(to right, #92a8d1 30%, #e6eeff 100%);
+        
         width: 100%;
         min-height: 400px;
         height: auto;
         padding-top: 84px;
         padding-bottom: 60px;
-        // background-image: url(http://127.0.0.1:5678/api/cdn/v1/resource?hkey=99cc396f3f279bcfe06496a21e104c3e6d89ae07863de6276b9b1ab465b4cf72);
+        background-image: url(http://london.ethearnal.com:9999/api/cdn/v1/resource?hkey=feb3a3312025eee33ee33c765fcd91187b1b8d73eaa7496c96948775e6f3e0cb);
         background-size: cover;
         background-repeat: no-repeat;
+        position: relative;
+        &:after {
+            content: '';
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            background: linear-gradient(to right, #92a8d1 30%, #92a8d1 100%);
+            opacity: 0.9;
+        }
     .user-info-wrap {
         display: flex;
         padding-top: 40px;
+        z-index: 10;
+        position: relative;
         .user-avatar {
             width: 150px;
             height: 150px;
