--- a/ethnode/webui/src/scss/elements/_profile-page.scss
+++ b/ethnode/webui/src/scss/elements/_profile-page.scss
@@ -184,6 +184,7 @@
 .btn-pink {
     background-color: #f7cac9;
     border-color: #f7cac9;
+    color: #fff;
     &:hover {
         background-color: #fddcdb;
         border-color: #f7cac9;
