--- a/ethnode/webui/styles/main.css
+++ b/ethnode/webui/styles/main.css
@@ -3640,5 +3640,5 @@ div.new-modal-footer-buttons {
 
 .ui.multiple.dropdown>.label {
     background-color: transparent;
-    color: #6863ff;
+    color: #92a8d1;
 }
