--- a/ethnode/webui/src/scss/elements/_user-card.scss
+++ b/ethnode/webui/src/scss/elements/_user-card.scss
@@ -136,6 +136,32 @@
             }
         }
     }
+    .user-skills {
+        text-align: left;
+        padding: 0 20px;
+        height: 55px;
+        overflow: hidden;
+        margin-top: 30px;
+        .item {
+            border-radius: 4px;
+            border: solid 1px;
+            padding: 4px 4px;
+            line-height: 1;
+            font-size: 10px;
+            color: #92a8d2;
+            border-color: #92a8d2;
+            margin-right: 5px;
+            margin-bottom: 5px;
+            display: inline-block;
+            transition: .3s;
+            cursor: pointer;
+            &:hover {
+                color: #fff;
+                border-color: #92a8d2;
+                background-color: #92a8d2;
+            }
+        }
+    }
     &:hover {
         // lags with blue transform: scale(1.02);
         box-shadow: 3px 5px 9px 0 rgba(0, 0, 0, 0.1);
