--- a/ethnode/webui/src/scss/elements/_user-card.scss
+++ b/ethnode/webui/src/scss/elements/_user-card.scss
@@ -12,6 +12,7 @@
     transition: all 0.15s ease-in;
     z-index: 1;
     min-height: 441px;
+    position: relative;
     &.gig {
         cursor: pointer;
     }
@@ -102,14 +103,14 @@
             text-align: center;
             line-height: 1.4;
             display: block;
-        display: -webkit-box;
-        max-width: 400px;
-        height: 110px;
-        margin: 0 auto;
-        -webkit-line-clamp: 6;
-        -webkit-box-orient: vertical; 
-        overflow: hidden;
-        text-overflow: ellipsis;
+            display: -webkit-box;
+            max-width: 400px;
+            height: 110px;
+            margin: 0 auto;
+            -webkit-line-clamp: 6;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
     }
     .user-price {
@@ -123,6 +124,9 @@
         padding-bottom: 5px;
         border-top: 1px solid #eee;
         background-color: #ffecec;
+        position: absolute;
+        bottom: 0;
+        width: 100%;
         // background: rgba(149, 205, 248, 0.12941176470588237);
         span {
             display: flex;
