--- a/ethnode/webui/src/scss/elements/_user-card.scss
+++ b/ethnode/webui/src/scss/elements/_user-card.scss
@@ -164,7 +164,7 @@
         }
     }
     &:hover {
-        // lags with blue transform: scale(1.02);
+        transform: scale(1.02);
         box-shadow: 3px 5px 9px 0 rgba(0, 0, 0, 0.1);
     }
     &.profile-user-card {
@@ -182,4 +182,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    img {
+        width: 35px;
+    }
 }
