--- a/ethnode/webui/src/scss/elements/_user-card.scss
+++ b/ethnode/webui/src/scss/elements/_user-card.scss
@@ -178,7 +178,7 @@
 
 .preloader-card {
     width: 240px;
-    height: auto;
+    height: 441px;
     display: flex;
     align-items: center;
     justify-content: center;
