Rewriting init module functionality

--- a/ethnode/webui/src/scss/elements/_profile-page.scss
+++ b/ethnode/webui/src/scss/elements/_profile-page.scss
@@ -31,7 +31,7 @@
             border: 3px solid #eee;
             box-shadow: 1px 2px 3px 0 rgba(0, 0, 0, 0.1);
             border-radius: 50%;
-            background-image: url(http://127.0.0.1:5678/api/cdn/v1/resource?hkey=1194084ed34ed008353809a6c9fa6dd2ce3f0f561c10d5399123cd34622d0172);
+            //background-image: url(http://127.0.0.1:5678/api/cdn/v1/resource?hkey=1194084ed34ed008353809a6c9fa6dd2ce3f0f561c10d5399123cd34622d0172);
             background-position: center;
             background-size: cover;
         }
