--- a/ethnode/webui/src/scss/elements/_user-card.scss
+++ b/ethnode/webui/src/scss/elements/_user-card.scss
@@ -71,6 +71,15 @@
             border: 2px solid #fff;
             box-shadow: 0px 0px 5px #444343;
         }
+        .div-img-wrap {
+          width: 80px;
+          height: 80px;
+          border-radius: 100%;
+          border: 2px solid #fff;
+          overflow: hidden;
+          box-shadow: 0px 0px 5px #444343;
+          background-size: cover !important;
+        }
     }
     .user-name {
         text-align: center;
