--- a/ethnode/webui/styles/main.css
+++ b/ethnode/webui/styles/main.css
@@ -2453,7 +2453,7 @@ sup i.material-icons {
 
 .slider-wrapper .marker-100,
 .slider-wrapper-2 .marker-100 {
-    right: 0;
+    right: 10px;
     -webkit-transform: translateX(50%);
     -ms-transform: translateX(50%);
     transform: translateX(50%);
@@ -3642,4 +3642,13 @@ div.new-modal-footer-buttons {
 .ui.multiple.dropdown>.label {
     background-color: transparent;
     color: #92a8d1;
+}
+
+.no-results {
+    width: 100%;
+    height: 100%;
+    min-height: 500px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
