issues fix + 10x speed for loading

--- a/ethnode/webui/styles/main.css
+++ b/ethnode/webui/styles/main.css
@@ -3652,3 +3652,9 @@ div.new-modal-footer-buttons {
     align-items: center;
     justify-content: center;
 }
+
+
+/* .multiple {
+    overflow: hidden;
+    overflow-y: scroll;
+} */
