html cleaning in progress

--- a/ethnode/webui/src/templates/header-global.html
+++ b/ethnode/webui/src/templates/header-global.html
@@ -18,10 +18,16 @@
 						<i class="ti-angle-down font-size-14 mrg-left-5"></i>
 						<!-- JSON DATA GOES HERE-->
 					</li>
-				</ul>
-				<ul data-labelledby="settings-dropdown" class="dropdown-menu absolute">
-					<li><a href="/ui/profile" class="flex-block flex-center"><i class="ti-user pdd-right-10 font-size-18"></i>My Profile</a></li>
-					<li><a href="" data-toggle="modal" data-target="#modal-sm" class="flex-block flex-center"><i class="ti-info pdd-right-10 font-size-18"></i>About Node</a></li>
+						<ul data-labelledby="settings-dropdown" class="dropdown-menu absolute">
+							<li>
+								<a href="/ui/profile" class="flex-block flex-center">
+									<i class="ti-user pdd-right-10 font-size-18"></i>My Profile</a>
+							</li>
+							<li>
+								<a href="" data-toggle="modal" data-target="#modal-sm" class="flex-block flex-center">
+									<i class="ti-info pdd-right-10 font-size-18"></i>About Node</a>
+							</li>
+						</ul>
 				</ul>
 			</div>
 		</nav>
